--- a/Makefile.dependency
+++ b/Makefile.dependency
@@ -77,10 +77,11 @@ int3dvar.o : int3dvar.f90 state_vectors.o gridmod.o jfunc.o mpimod.o kinds.o
 intall.o : intall.f90 timermod.o intlimq.o state_vectors.o bias_predictors.o intjo.o obsmod.o jfunc.o constants.o gsi_4dvar.o gridmod.o kinds.o 
 intdw.o : intdw.f90 jfunc.o gridmod.o qcmod.o obsmod.o constants.o kinds.o 
 intgps.o : intgps.f90 jfunc.o constants.o gridmod.o qcmod.o obsmod.o kinds.o 
-intjo.o : intjo.f90 intoz.o intpcp.o intdw.o intsst.o intsrw.o intspd.o intrw.o intgps.o inttcp.o intrad.o intq.o intpw.o intps.o intw.o intt.o bias_predictors.o state_vectors.o gridmod.o jfunc.o obsmod.o constants.o kinds.o mpl_allreduce.o 
+intjo.o : intjo.f90 intoz.o intpcp.o intdw.o intsst.o intsrw.o intspd.o intrw.o intgps.o inttcp.o intrad.o intq.o intpw.o intps.o intw.o intt.o intlag.o bias_predictors.o state_vectors.o gridmod.o jfunc.o obsmod.o constants.o kinds.o mpl_allreduce.o 
 intlimq.o : intlimq.f90 jfunc.o gridmod.o constants.o kinds.o 
 intoz.o : intoz.f90 constants.o jfunc.o ozinfo.o gridmod.o obsmod.o kinds.o 
 intpcp.o : intpcp.f90 jfunc.o gsi_4dvar.o gridmod.o constants.o pcpinfo.o qcmod.o obsmod.o kinds.o 
+intlag.o : intlag.F90 kinds.o constants.o obsmod.o qcmod.o gridmod.o jfunc.o lag_fields.o lag_traj.o mpimod.o
 intps.o : intps.f90 jfunc.o gridmod.o qcmod.o obsmod.o constants.o kinds.o 
 intpw.o : intpw.f90 jfunc.o constants.o qcmod.o gridmod.o obsmod.o kinds.o 
 intq.o : intq.f90 jfunc.o gridmod.o qcmod.o obsmod.o constants.o kinds.o 
@@ -99,6 +100,9 @@ intw.o : intw.f90 jfunc.o gridmod.o qcmod.o obsmod.o constants.o kinds.o
 jcmod.o : jcmod.f90 constants.o kinds.o 
 jfunc.o : jfunc.f90 bias_predictors.o gsi_4dvar.o pcpinfo.o radinfo.o obsmod.o mpimod.o m_berror_stats.o gridmod.o constants.o state_vectors.o control_vectors.o kinds.o 
 kinds.o : kinds.f90 
+lag_fields.o : lag_fields.F90 kinds.o gridmod.o guess_grids.o constants.o gsi_4dvar.o state_vectors.o lag_traj.o lag_interp.o
+lag_interp.o : lag_interp.F90 kinds.o gridmod.o constants.o
+lag_traj.o : lag_traj.F90 kinds.o constants.o lag_interp.o
 lagmod.o : lagmod.f90 constants.o kinds.o 
 lanczos.o : lanczos.f90 timermod.o control_vectors.o jfunc.o constants.o kinds.o 
 looplimits.o : looplimits.f90 kinds.o 
