--- a/Makefile.dependency
+++ b/Makefile.dependency
@@ -2,9 +2,13 @@ GSI_GridCompMod.o : GSI_GridCompMod.F90 xhat_vordivmod.o compact_diffs.o obsmod.
 abor1.o : abor1.f90 mpimod.o kinds.o 
 adjtest.o : adjtest.f90 bias_predictors.o state_vectors.o control_vectors.o mpimod.o jfunc.o constants.o gsi_4dvar.o kinds.o 
 anberror.o : anberror.f90 mpimod.o fgrid2agrid_mod.o jfunc.o constants.o gridmod.o berror.o raflib.o kinds.o 
-anbkerror_reg.o : anbkerror_reg.f90 raflib.o fgrid2agrid_mod.o anberror.o mpimod.o guess_grids.o gsi_4dvar.o control_vectors.o constants.o berror.o balmod.o jfunc.o gridmod.o kinds.o 
-anisofilter.o : anisofilter.f90 mpimod.o guess_grids.o jfunc.o raflib.o balmod.o constants.o gridmod.o fgrid2agrid_mod.o anberror.o kinds.o 
+anbkerror.o : anbkerror.f90 raflib.o fgrid2agrid_mod.o anberror.o mpimod.o guess_grids.o gsi_4dvar.o control_vectors.o constants.o berror.o balmod.o jfunc.o patch2grid_mod.o gridmod.o kinds.o 
+aniso_ens_util.o : aniso_ens_util.f90 guess_grids.o anberror.o mpimod.o wind_fft.o gridmod.o constants.o kinds.o
+anisofilter.o : anisofilter.f90 mpimod.o guess_grids.o jfunc.o raflib.o balmod.o constants.o gridmod.o fgrid2agrid_mod.o anberror.o aniso_ens_util.o sub2fslab_mod.o antest_maps0.o kinds.o 
+anisofilter_glb.o : anisofilter_glb.f90 compact_diffs.o specmod.o balmod.o sub2fslab_mod.o patch2grid_mod.o smooth_polcarf.o berror.o aniso_ens_util.o anisofilter.o mpimod.o guess_grids.o jfunc.o raflib.o constants.o gridmod.o fgrid2agrid_mod.o anberror.o antest_maps0_glb.o kinds.o
 antcorr_application.o : antcorr_application.f90 
+antest_maps0.o : antest_maps0.f90 fgrid2agrid_mod.o guess_grids.o mpimod.o constants.o gridmod.o anberror.o kinds.o
+antest_maps0_glb.o : antest_maps0_glb.f90 patch2grid_mod.o guess_grids.o mpimod.o constants.o gridmod.o anberror.o kinds.o
 balmod.o : balmod.f90 mod_strong.o mod_vtrans.o guess_grids.o m_berror_stats.o constants.o mpimod.o gridmod.o kinds.o 
 berror.o : berror.f90 mpimod.o jfunc.o gridmod.o balmod.o constants.o kinds.o 
 bias_predictors.o : bias_predictors.f90 constants.o kinds.o 
@@ -22,7 +26,7 @@ calctends_no_tl.o : calctends_no_tl.F90 guess_grids.o tendsmod.o constants.o gri
 calctends_tl.o : calctends_tl.F90 guess_grids.o tendsmod.o constants.o gridmod.o kinds.o 
 combine_radobs.o : combine_radobs.f90 mpimod.o constants.o kinds.o 
 compact_diffs.o : compact_diffs.f90 constants.o gridmod.o kinds.o 
-compute_derived.o : compute_derived.f90 constants.o obsmod.o mod_strong.o balmod.o berror.o gridmod.o guess_grids.o mpimod.o jfunc.o kinds.o 
+compute_derived.o : compute_derived.f90 constants.o obsmod.o mod_strong.o balmod.o berror.o gridmod.o guess_grids.o mpimod.o jfunc.o sub2fslab_mod.o anberror.o anisofilter.o anisofilter_glb.o kinds.o 
 compute_fact10.o : compute_fact10.f90 constants.o kinds.o 
 constants.o : constants.f90 kinds.o 
 control2model.o : control2model.f90 mpimod.o balmod.o berror.o jfunc.o gridmod.o gsi_4dvar.o bias_predictors.o state_vectors.o control_vectors.o kinds.o 
@@ -72,6 +76,7 @@ gsimod.o : gsimod.F90 lag_traj.o lag_interp.o lag_fields.o m_berror_stats.o read
 gsisub.o : gsisub.F90 oneobmod.o read_l2bufr_mod.o ozinfo.o convinfo.o pcpinfo.o radinfo.o mpimod.o gridmod.o observer.o obsmod.o kinds.o 
 guess_grids.o : guess_grids.F90 mpimod.o constants.o regional_io.o gridmod.o kinds.o 
 half_nmm_grid2.o : half_nmm_grid2.f90 gridmod.o constants.o kinds.o 
+hilbert_curve.o : hilbert_curve.f90 phil.o phil1.o kinds.o
 inc2guess.o : inc2guess.f90 state_vectors.o xhat_vordivmod.o gsi_4dvar.o guess_grids.o gridmod.o mpimod.o kinds.o 
 init_commvars.o : init_commvars.f90 constants.o mpimod.o gridmod.o kinds.o 
 init_jcdfi.o : init_jcdfi.F90 jcmod.o mpimod.o constants.o gsi_4dvar.o kinds.o 
@@ -143,16 +148,20 @@ obsmod.o : obsmod.F90 gridmod.o mpimod.o constants.o gsi_4dvar.o kinds.o
 omegas_ad.o : omegas_ad.f90 constants.o kinds.o 
 oneobmod.o : oneobmod.F90 obsmod.o gsi_io.o constants.o kinds.o 
 ozinfo.o : ozinfo.f90 obsmod.o mpimod.o kinds.o 
-pcgsoi.o : pcgsoi.f90 timermod.o xhat_vordivmod.o bias_predictors.o state_vectors.o control_vectors.o mod_strong.o stpcalc.o intall.o mpimod.o anberror.o constants.o gridmod.o gsi_4dvar.o jfunc.o obsmod.o qcmod.o kinds.o 
+patch2grid_mod.o : patch2grid_mod.f90 fgrid2agrid_mod.o smooth_polcarf.o gridmod.o anberror.o constants.o kinds.o
+pcgsoi.o : pcgsoi.f90 timermod.o xhat_vordivmod.o bias_predictors.o state_vectors.o control_vectors.o mod_strong.o stpcalc.o intall.o mpimod.o anberror.o constants.o gridmod.o gsi_4dvar.o jfunc.o obsmod.o qcmod.o projmethod_support.o kinds.o 
 pcgsqrt.o : pcgsqrt.f90 control_vectors.o mpimod.o constants.o jfunc.o kinds.o 
 pcp_k.o : pcp_k.f90 specmod.o gridmod.o pcpinfo.o constants.o kinds.o 
 pcpinfo.o : pcpinfo.f90 mpimod.o gridmod.o obsmod.o constants.o kinds.o 
 penal.o : penal.f90 state_vectors.o convinfo.o jfunc.o gridmod.o converr.o obsmod.o gsi_4dvar.o constants.o mpimod.o kinds.o 
+phil.o : kinds.o
+phil1.o : kinds.o
 plib8.o : plib8.f90 
 polcarf.o : polcarf.f90 constants.o gridmod.o kinds.o 
 precpd_ad.o : precpd_ad.f90 constants.o kinds.o 
 prewgt.o : prewgt.f90 obsmod.o smooth_polcarf.o guess_grids.o constants.o gridmod.o jfunc.o mpimod.o m_berror_stats.o berror.o kinds.o 
 prewgt_reg.o : prewgt_reg.f90 guess_grids.o constants.o gridmod.o jfunc.o mpimod.o berror.o balmod.o kinds.o 
+projmethod_support.o : projmethod_support.f90 gsi_4dvar.o pcpinfo.o radinfo.o gridmod.o mpimod.o constants.o jfunc.o control_vectors.o kinds.o
 prt_guess.o : prt_guess.f90 satthin.o jfunc.o pcpinfo.o radinfo.o guess_grids.o gridmod.o constants.o mpimod.o kinds.o 
 psichi2uv_reg.o : psichi2uv_reg.f90 gridmod.o constants.o kinds.o 
 psichi2uvt_reg.o : psichi2uvt_reg.f90 gridmod.o constants.o kinds.o 
@@ -184,7 +193,7 @@ read_obs.o : read_obs.F90 jfunc.o tendsmod.o convinfo.o pcpinfo.o ozinfo.o radin
 read_obsdiags.o : read_obsdiags.F90 radinfo.o pcpinfo.o gridmod.o lag_traj.o jfunc.o mpimod.o gsi_4dvar.o obs_sensitivity.o obsmod.o constants.o kinds.o 
 read_ozone.o : read_ozone.F90 qcmod.o gsi_4dvar.o convinfo.o obsmod.o constants.o gridmod.o satthin.o kinds.o 
 read_pcp.o : read_pcp.f90 gsi_4dvar.o obsmod.o constants.o gridmod.o kinds.o 
-read_prepbufr.o : read_prepbufr.f90 blacklist.o convthin.o qcmod.o gsi_4dvar.o converr.o obsmod.o convinfo.o gridmod.o constants.o kinds.o 
+read_prepbufr.o : read_prepbufr.f90 blacklist.o convthin.o qcmod.o gsi_4dvar.o converr.o obsmod.o convinfo.o gridmod.o sfcobsqc.o support_2dvar.o constants.o kinds.o 
 read_radar.o : read_radar.f90 satthin.o convinfo.o gridmod.o gsi_4dvar.o obsmod.o qcmod.o constants.o kinds.o 
 read_ssmi.o : read_ssmi.f90 gsi_4dvar.o obsmod.o constants.o gridmod.o radinfo.o satthin.o kinds.o 
 read_ssmis.o : read_ssmis.f90 calc_fov_conical.o gsi_4dvar.o constants.o gridmod.o radinfo.o satthin.o kinds.o 
@@ -222,6 +231,7 @@ setuptcp.o : setuptcp.f90 jfunc.o convinfo.o constants.o gridmod.o guess_grids.o
 setupw.o : setupw.f90 converr.o convinfo.o jfunc.o constants.o guess_grids.o gridmod.o oneobmod.o qcmod.o gsi_4dvar.o obsmod.o kinds.o 
 setupyobs.o : setupyobs.f90 gsi_4dvar.o obsmod.o kinds.o 
 sfc_model.o : sfc_model.f90 constants.o kinds.o 
+sfcobsqc.o : sfcobsqc.f90 kinds.o
 simpin1.o : simpin1.f90 constants.o kinds.o 
 simpin1_init.o : simpin1_init.f90 constants.o kinds.o 
 smooth121.o : smooth121.f90 constants.o kinds.o 
@@ -265,8 +275,9 @@ strong_bal_correction.o : strong_bal_correction.f90 gridmod.o strong_fast_global
 strong_baldiag_inc.o : strong_baldiag_inc.f90 constants.o control_vectors.o state_vectors.o mod_vtrans.o gsi_4dvar.o gridmod.o mpimod.o kinds.o 
 strong_fast_global_mod.o : strong_fast_global_mod.f90 mpimod.o constants.o mod_inmi.o mod_vtrans.o specmod.o gridmod.o kinds.o 
 strong_slow_global_mod.o : strong_slow_global_mod.f90 constants.o specmod.o mod_inmi.o mod_vtrans.o mpimod.o gridmod.o kinds.o 
+sub2fslab_mod.o : sub2fslab_mod.f90 patch2grid_mod.o fgrid2agrid_mod.o constants.o anberror.o gridmod.o kinds.o
 sub2grid.o : sub2grid.f90 constants.o jfunc.o gridmod.o mpimod.o kinds.o 
-support_2dvar.o : support_2dvar.f90 jfunc.o obsmod.o constants.o gridmod.o guess_grids.o mpimod.o gsi_io.o gsi_4dvar.o kinds.o 
+support_2dvar.o : support_2dvar.f90 jfunc.o obsmod.o constants.o gridmod.o guess_grids.o mpimod.o gsi_io.o gsi_4dvar.o convinfo.o hilbert_curve.o kinds.o 
 tcv_mod.o : tcv_mod.f90 kinds.o 
 tendsmod.o : tendsmod.f90 gridmod.o kinds.o 
 test_obsens.o : test_obsens.F90 control_vectors.o obs_sensitivity.o mpimod.o obsmod.o jfunc.o constants.o kinds.o 
@@ -287,6 +298,7 @@ unhalf_nmm_grid2.o : unhalf_nmm_grid2.f90 gridmod.o kinds.o
 update_geswtend.o : update_geswtend.f90 compact_diffs.o guess_grids.o gridmod.o jfunc.o constants.o mpimod.o kinds.o 
 update_guess.o : update_guess.f90 state_vectors.o bias_predictors.o m_gsiBiases.o pcpinfo.o radinfo.o gsi_4dvar.o compact_diffs.o xhat_vordivmod.o guess_grids.o gridmod.o jfunc.o constants.o mpimod.o kinds.o 
 ut_fvAnaGrid.o : ut_fvAnaGrid.F90 m_utests.o 
+wind_fft.o : wind_fft.f90
 wrf_binary_interface.o : wrf_binary_interface.F90 constants.o gsi_io.o gsi_4dvar.o kinds.o nemsio_module.o
 wrf_netcdf_interface.o : wrf_netcdf_interface.F90 
 write_all.o : write_all.F90 ncepgfs_io.o regional_io.o gsi_io.o m_gsiBiases.o guess_grids.o jfunc.o constants.o gridmod.o mpimod.o kinds.o 
