Trunk: Merged yzhu_rbc at r10288 to the trunk. This update brings in the code changes required to use adaptive radiance angle bias correction, the newpc4pred option, and bias correction for passive channels. At this point, the changes aren't implemented (all new features are controlled by flags which are currently set to their default of false), but there are differences in results due to reodering of the bias correction terms. Please note that the reordering of the bias correction terms in setuprad affects the radiance diagnostic files. Any external codes which assume a specific ordering of bias correction terms will need to updated in order to work correctly with the yzhu_rbc code.
git-svn-id: https://svnemc.ncep.noaa.gov/projects/gsi/trunk/src@10314 281fb692-3a18-0410-826d-9e847983f365

--- a/makefile_DTC
+++ b/makefile_DTC
@@ -252,6 +252,8 @@ LIBsys          = $(MYLIBsys)
 	phil1.o \
 	plib8.o \
 	polcarf.o \
+	prad_bias.o \
+	precond.o \
 	precpd_ad.o \
 	prewgt.o \
 	prewgt_reg.o \
@@ -275,6 +277,7 @@ LIBsys          = $(MYLIBsys)
 	read_avhrr_navy.o \
 	read_bufrtovs.o \
 	read_co.o \
+	read_diag.o \
 	read_files.o \
         read_gfs_ozone_for_regional.o \
 	read_goesimg.o \
