Trunk: Merge pagowski2 branch at r11953 to the trunk. This change introduces the CMAQ analysis into the GSI. This is done by assimilating AIRNow surface observations of PM2.5 with the CMAQ model background.  In the fix/ directory, the convinfo files had pm2_5 added, along with the addition of two files: cmaq_pm2_5_reg_berror_12z.bin and anavinfo_cmaq_binary.  In the scripts/ diretory, the regression_namelists.sh and regression_namelists_db.sh files had a new namelist option added, &CHEM.  A new stand alone test was also added, llsub_gsi_cmaq.sh.  Finally, additional information for the CMAQ analysis was added to regression_var.sh, along with changing the developmental machine to Stratus (set machine=stratus). Several new files have been added to the src/ directory.  These are: cmaq_routines.f90, intpm2_5.f90, read_anowbufr.f90, setuppm2_5.f90, stppm2_5.f90, chemmod.f90.
git-svn-id: https://svnemc.ncep.noaa.gov/projects/gsi/trunk/src@11978 281fb692-3a18-0410-826d-9e847983f365

--- a/makefile_DTC
+++ b/makefile_DTC
@@ -100,6 +100,9 @@ LIBsys          = $(MYLIBsys)
 	calctends_tl.o \
 	calctends_no_ad.o \
 	calctends_no_tl.o \
+        chemmod.o \
+        clw_mod.o \
+        cmaq_routines.o \
         coinfo.o \
 	combine_radobs.o \
 	compact_diffs.o \
@@ -179,6 +182,7 @@ LIBsys          = $(MYLIBsys)
 	intlimq.o \
 	intoz.o \
 	intpcp.o \
+        intpm2_5.o \
 	intps.o \
 	intpw.o \
 	intq.o \
@@ -273,6 +277,7 @@ LIBsys          = $(MYLIBsys)
         read_aerosol.o \
 	read_airs.o \
 	read_amsre.o \
+        read_anowbufr.o \
 	read_avhrr.o \
 	read_avhrr_navy.o \
 	read_bufrtovs.o \
@@ -323,6 +328,7 @@ LIBsys          = $(MYLIBsys)
         setuplag.o \
 	setupoz.o \
 	setuppcp.o \
+        setuppm2_5.o \
 	setupps.o \
 	setuppw.o \
 	setupq.o \
@@ -365,6 +371,7 @@ LIBsys          = $(MYLIBsys)
 	stplimq.o \
 	stpoz.o \
 	stppcp.o \
+        stppm2_5.o \
 	stpps.o \
 	stppw.o \
 	stpq.o \
