Trunk: Merged EXP-5partupdate at r14620 to the trunk.  This merge brings in 5 different developments, which include:
1. Russ Treadon
   a. Small fix to the use of sbuv at the model top.
   b. A modification to how TCVITL surface pressure observational
      errors are specified.
   c. Add option to revert ozone analysis to univariate above
      specified level in hybrid.
   d. Correct index in setuprad.
   e. Optimization (threading) changes.

2. Andrew Collard
   a. Remove relaxation of quality control for AMSU-A channel 5
      introduce in r5986

3. David Parrish
   a. Fix error in height assignment for radar radial wind data

4. XiuJuan Su
   a. Allow reading of satellite winds from dump files rather than
      PREPBUFR files.  This allows reading
      of more information contained in dump files not transfered
      to PREPBUFR files.
   b. Additional quality control for satellite winds.
   c. Inclusion of 250 type winds.

5. Haixia Liu
    a. Inclusion of the ability to use SEVIRI data.  Added to global
       regression tests.

Finally a check was added to ensure that the anavinfo information
was consistent with the read in background information.


git-svn-id: https://svnemc.ncep.noaa.gov/projects/gsi/trunk/src@14729 281fb692-3a18-0410-826d-9e847983f365

--- a/makefile_DTC
+++ b/makefile_DTC
@@ -72,7 +72,6 @@ LIBsys          = $(MYLIBsys)
 # ------------
 
   OBJS	= \
-	abor1.o \
         adjtest.o \
         aeroinfo.o \
 	anberror.o \
@@ -86,6 +85,8 @@ LIBsys          = $(MYLIBsys)
 	balmod.o \
 	berror.o \
         bias_predictors.o \
+	bicg.o \
+	bicglanczos.o \
 	bkerror.o \
 	bkgcov.o \
 	bkgvar.o \
@@ -102,6 +103,7 @@ LIBsys          = $(MYLIBsys)
         chemmod.o \
         clw_mod.o \
         cmaq_routines.o \
+	co_mop_ak.o \
         coinfo.o \
 	combine_radobs.o \
 	compact_diffs.o \
@@ -191,7 +193,6 @@ LIBsys          = $(MYLIBsys)
 	intq.o \
 	intrad.o \
 	intrp2a.o \
-	intrp3co.o \
 	intrp3oz.o \
 	intrw.o \
 	intspd.o \
@@ -202,6 +203,7 @@ LIBsys          = $(MYLIBsys)
 	intw.o \
 	jcmod.o \
 	jfunc.o \
+	jgrad.o \
 	kinds.o \
         lag_fields.o \
         lag_interp.o \
@@ -305,6 +307,7 @@ LIBsys          = $(MYLIBsys)
 	read_prepbufr.o \
 	read_radar.o \
         read_RadarRef_mosaic.o \
+	read_satwnd.o \
 	read_seviri.o \
 	read_ssmi.o \
 	read_ssmis.o \
