Trunk: Merged todling_13012/src at r15272 to the trunk. This update brings two changes to the trunk. Changes to incorporate hybrid capability to sqrt(B) have begun (please see ticket #39). Also, the GSI no longer runs or compiles when r_kind is redefined to be equal to r_single (i.e., the code will only work when r_kind is double precision). Modifications have been made so that the code can be ran using both single and double precision (please see ticket #190). Finally, several bug fixes have been added as well.
git-svn-id: https://svnemc.ncep.noaa.gov/projects/gsi/trunk/src@15520 281fb692-3a18-0410-826d-9e847983f365

--- a/makefile_DTC
+++ b/makefile_DTC
@@ -72,6 +72,7 @@ LIBsys          = $(MYLIBsys)
 # ------------
 
   OBJS	= \
+	abor1.o \
         adjtest.o \
         aeroinfo.o \
 	anberror.o \
@@ -85,8 +86,6 @@ LIBsys          = $(MYLIBsys)
 	balmod.o \
 	berror.o \
         bias_predictors.o \
-	bicg.o \
-	bicglanczos.o \
 	bkerror.o \
 	bkgcov.o \
 	bkgvar.o \
@@ -103,7 +102,6 @@ LIBsys          = $(MYLIBsys)
         chemmod.o \
         clw_mod.o \
         cmaq_routines.o \
-	co_mop_ak.o \
         coinfo.o \
 	combine_radobs.o \
 	compact_diffs.o \
@@ -121,6 +119,7 @@ LIBsys          = $(MYLIBsys)
         crtm_interface.o \
         cvsection.o \
         deter_nst.o \
+        deter_sfc_mod.o \
 	dtast.o \
 	egrid2agrid_mod.o \
         enorm_state.o \
@@ -144,6 +143,7 @@ LIBsys          = $(MYLIBsys)
 	get_derivatives.o \
 	get_derivatives2.o \
         get_gefs_ensperts_dualres.o \
+        get_gefs_for_regional.o \
 	get_semimp_mats.o \
 	getprs.o \
 	getsiga.o \
@@ -193,6 +193,7 @@ LIBsys          = $(MYLIBsys)
 	intq.o \
 	intrad.o \
 	intrp2a.o \
+	intrp3co.o \
 	intrp3oz.o \
 	intrw.o \
 	intspd.o \
@@ -203,7 +204,6 @@ LIBsys          = $(MYLIBsys)
 	intw.o \
 	jcmod.o \
 	jfunc.o \
-	jgrad.o \
 	kinds.o \
         lag_fields.o \
         lag_interp.o \
@@ -307,7 +307,7 @@ LIBsys          = $(MYLIBsys)
 	read_prepbufr.o \
 	read_radar.o \
         read_RadarRef_mosaic.o \
-	read_satwnd.o \
+        read_satwnd.o \
 	read_seviri.o \
 	read_ssmi.o \
 	read_ssmis.o \
@@ -323,6 +323,8 @@ LIBsys          = $(MYLIBsys)
 	rsearch.o \
         rtlnmc_version3.o \
 	satthin.o \
+        set_crtm_aerosolmod.o \
+        set_crtm_cloudmod.o \
         setupbend.o \
         setupco.o \
 	setupdw.o \
